--- a/package.json
+++ b/package.json
@@ -1,19 +1,45 @@
 {
   "name": "jBit",
   "version": "1.0.0",
+  "description": "A simple jQuery like DOM Traverse lightweight library written in ES6.",
   "engines": {
     "node": ">=6.0.0",
     "npm": ">=3.0"
   },
+  "jsnext:main": "src/index.js",
+  "main": "dist/jbit.js",
   "scripts": {
     "start": "concurrently \"lite-server\" \"npm run dev\"",
     "dev": "rollup -c rollup.config.js -m -w",
-    "prod": "NODE_ENV=production rollup -c rollup.config.js"
+    "prod": "NODE_ENV=production rollup -c rollup.config.js",
+    "test": "karma start --single-run",
+    "test:w": "karma start"
   },
+  "repository": "vfreitas-/jBit",
+  "keywords": [
+    "dom",
+    "traverse",
+    "lightweight",
+    "es6"
+  ],
+  "homepage": "https://github.com/vfreitas-/jBit",
+  "authors": [
+    "Vitor Freitas <vitor_freitas_b@hotmail.com>"
+  ],
+  "license": "MIT",
   "devDependencies": {
+    "chai": "^3.5.0",
     "concurrently": "^3.1.0",
+    "documentation": "^4.0.0-beta.18",
     "eslint": "^3.8.0",
+    "karma": "^1.4.0",
+    "karma-chai": "^0.1.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-rollup-plugin": "^0.2.4",
     "lite-server": "^2.2.2",
+    "mocha": "^3.2.0",
     "rollup": "^0.36.4",
     "rollup-plugin-buble": "^0.14.0",
     "rollup-plugin-uglify": "^1.0.1",
