--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
     "eslint": "^3.8.0",
     "karma": "^1.4.0",
     "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-html2js-preprocessor": "^1.1.0",
     "karma-jasmine": "^1.1.0",
     "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
     "karma-rollup-plugin": "^0.2.4",
     "lite-server": "^2.2.2",
     "mocha": "^3.2.0",
