--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "concurrently \"lite-server\" \"npm run dev\"",
     "dev": "rollup -c rollup.config.js -m -w",
     "prod": "NODE_ENV=production rollup -c rollup.config.js",
-    "test": "karma start --single-run",
+    "test": "karma start --single-run --browsers Chrome",
     "test:w": "karma start"
   },
   "repository": "vfreitas-/jBit",
