--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "jsnext:main": "src/index.js",
   "main": "dist/jbit.js",
   "scripts": {
-    "start": "concurrently \"lite-server\" \"npm run dev\"",
-    "dev": "rollup -c rollup.config.js -m -w",
+    "start": "rollup -c rollup.config.js -m -w",
     "prod": "NODE_ENV=production rollup -c rollup.config.js",
     "test": "karma start --single-run",
     "test:w": "karma start"
@@ -29,7 +28,6 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.5.0",
-    "concurrently": "^3.1.0",
     "documentation": "^4.0.0-beta.18",
     "eslint": "^3.8.0",
     "karma": "^1.4.0",
@@ -43,6 +41,7 @@
     "mocha": "^3.2.0",
     "rollup": "^0.36.4",
     "rollup-plugin-buble": "^0.14.0",
+    "rollup-plugin-eslint": "^3.0.0",
     "rollup-plugin-uglify": "^1.0.1",
     "rollup-watch": "^2.5.0"
   }
