--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,8 @@
     },
     "parser": "espree",
     "rules": {
+        "arrow-spacing": 2,
+        "keyword-spacing": 2,
         "no-unused-vars": 2,
         "no-var": 2,
         "comma-dangle": 2,
@@ -16,6 +18,6 @@
         "indent": [2, 4],
         "prefer-arrow-callback": 2,
         "semi": [2, "never"],
-        "space-before-blocks": [2, { "functions": "always", "keywords": "always", "classes": "always" }]
+        "space-before-blocks": 2
     }
 }
