Fix typo in tests, remove unused files, and update readme file

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,9 @@
         "mocha": true,
         "es6": true
     },
+    "ecmaFeatures": {
+        "modules": true
+    },
     "parser": "espree",
     "rules": {
         "arrow-spacing": 2,
