--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,10 @@ before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+after_success:
+  - codeclimate < ./coverage/lcov/lcov.info
+addons:
+  code_climate:
+    repo_token:
+      secure: CODECLIMATE_TOKEN
+
