--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 after_success:
-  - codeclimate < ./coverage/lcov/lcov.info
+  - npm install -g codeclimate-test-reporter
+  - codeclimate-test-reporter < ./coverage/lcov/lcov.info
 addons:
   code_climate:
     repo_token:
-      secure: CODECLIMATE_TOKEN
+      secure: $CODECLIMATE_TOKEN
 
