--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "mocha": "^3.2.0",
     "rollup": "^0.36.4",
     "rollup-plugin-buble": "^0.14.0",
+    "rollup-plugin-coverage": "^0.1.4",
     "rollup-plugin-eslint": "^3.0.0",
+    "rollup-plugin-istanbul": "^1.1.0",
     "rollup-plugin-uglify": "^1.0.1",
     "rollup-watch": "^2.5.0"
   }
