--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,7 @@ before_install:
 after_success:
   - npm install -g codeclimate-test-reporter
   - codeclimate-test-reporter < ./coverage/lcov/lcov.info
+addons:
+  code_climate:
+    repo_token: 269f51889a4862a486894b23ee2879c0057af09c7d9c1ff943a49da9331e1cd9
 
