--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,5 @@ before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 after_success:
-  - npm install -g codeclimate-test-reporter
-  - codeclimate-test-reporter < ./coverage/lcov/lcov.info
-addons:
-  code_climate:
-    repo_token: 269f51889a4862a486894b23ee2879c0057af09c7d9c1ff943a49da9331e1cd9
-
+  - npm install -g codecov
+  - codecov < coverage/lcov/lcov.info
