--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "rollup -c rollup.config.js -m -w",
     "prod": "NODE_ENV=production rollup -c rollup.config.js",
     "test": "karma start --single-run",
-    "test:w": "karma start"
+    "test:w": "karma start",
+    "docs": "documentation readme src/index.js --section API -q"
   },
   "repository": "vfreitas-/jBit",
   "keywords": [
