--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jBit",
+  "name": "jbit",
   "version": "1.0.0",
   "description": "A simple jQuery like DOM Traverse lightweight library written in ES6.",
   "engines": {
@@ -13,8 +13,13 @@
     "prod": "NODE_ENV=production rollup -c rollup.config.js",
     "test": "karma start --single-run",
     "test:w": "karma start",
-    "docs": "documentation readme src/index.js --section API -q"
+    "docs": "documentation readme src/index.js --section API -q",
+    "release": "npm run prod && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish"
   },
+  "files": [
+    "src",
+    "dist"
+  ],
   "repository": "vfreitas-/jBit",
   "keywords": [
     "dom",
